# orsa-mac

./: .RData  .gitignore  README.org  pyproject.toml
orsa_mac/: ATACM_2.csv  Exam1_Miller_Kapp.org  MLRS_BN_lat_lon.csv  MLRS_BN_lat_lon_10.csv  MLRS_BN_lat_lon_30.csv  PRSM1.csv  PRSM1_2.csv  PRSM2.csv  PRSM2_2.csv  USAF_lat_lon.csv  capstone.py  ddg.csv  ddg_2.csv  diff.py  math-programming-take-home.py  quicksort.py  sams.csv  sams_and_radars.csv  simulation_assignment_1.org  target_lat_lon.csv  tst.csv  usaf.csv  usaf_2.csv  wpn_stats.csv
orsa_mac/simulation/: simulation_assignment_1.org
